# free-software-library

./: CMakeLists.txt  README.md  documentFractionator.hpp  imageUtils.hpp  textCorpus.hpp  textCorpusItem.hpp
doc/: CMakeLists.txt  doc_template.html  standardese.config
include/fsl/: stringUtils.hpp
